--- a/welcome.html
+++ b/welcome.html
@@ -1,38 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> f300fe8 (change version)
-=======
->>>>>>> b1f203178ad91dcb5ee3443017138c4903f5618d
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>SELAMAT DATANG!</h1>
-    <p>Terima kasih telah bergabung di Website Kami. Media Belajar kita bersama!</p>
+    <div class="container mt-5">
+        <!-- Card Component -->
+        <div class="card border-secondary">
+            <div class="card-header bg-secondary text-white text-center">
+                <h1>SELAMAT DATANG!</h1>
+            </div>
+            <div class="card-body bg-light">
+                <p class="card-text text-center text-secondary">
+                    Terima kasih telah bergabung di Website Kami. Media Belajar kita bersama!
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Selamat Datang</title>
-  <link rel="stylesheet" href="Fahri.css">
-</head>
-<body>
-  <h1>SELAMAT DATANG!</h1>
-  <p>Terima kasih telah bergabung di Website Kami. Media Belajar kita bersama!</p>
-</body>
-</html>
->>>>>>> d020400 (Fahri-html)
->>>>>>> f300fe8 (change version)
-=======
->>>>>>> b1f203178ad91dcb5ee3443017138c4903f5618d
